# innovation-tech-challenge-2024

./: .gitignore  README.md  export_params.py  model.h  model.pth  models.py  pyproject.toml  tensor_data.h  train_model.ipynb
collect_data/: collect.py  requirements.txt  sercomm.py
collect_data/data/: leon_backward.csv  leon_closed.csv  leon_forward.csv  leon_oneleg.csv  leon_oneleg1.csv  leon_oneleg2.csv  leon_shaking.csv  leon_standing.csv  li_backward.csv  li_closed.csv  li_forward.csv  li_oneleg.csv  li_shaking.csv  li_standing.csv  mark_oneleg1.csv  mark_oneleg2.csv
collect_data/data_new/: czl_backward.csv  czl_closed.csv  czl_forward.csv  czl_oneleg1.csv  czl_oneleg2.csv  czl_standing.csv  leon_backward.csv  leon_closed.csv  leon_forward.csv  leon_oneleg.csv  leon_oneleg2.csv  leon_standing.csv
max78000-collect/: Makefile  callback.c  callback.h  main.c  mpu6050.c  wifi.c  wifi.h
max78000-firmware/: main.c  main.c.bak  main.c.bak1  mpu6050.h  tensor_data.h
max78000-firmware/classifier/: model.c  weights_0714.h  weights_0714_old.h
max78000-firmware/classifier_12/: model.c  model.h  weights.h
max78000-firmware/classifier_6/: model.c  weights.h
max78000-firmware/classifier_old/: model.c  model.h  model_balance.h  model_weakpart.h
max78000-firmware/classifier_old1/: model.c  model.h  model_weight.h
max78000-firmware/nn/: nn_modules.c  nn_modules.h
mqtt_monitoring_system/: calculate_data.py  mosquitto.conf  mqtt_client.py  run_all.bat  run_all.py  st_run.py  streamlit_app.py
